<?xml version="1.0"?>
<package>
  <name>PCL</name>
  <version>1.8.1</version>
  <description>The pcl package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="cm.mateo@ua.es">Carlos M. Mateo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pcl_proxy</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="cm.mateo@ua.es">Carlos M. Mateo</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>eigen</build_depend>
  <build_depend>libflann</build_depend>
  <build_depend>libusb</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>libpcap</build_depend>
  
  <run_depend>eigen</run_depend>
  <run_depend>libflann</run_depend>
  <run_depend>libusb</run_depend>
  <run_depend>libpng12-dev</run_depend>
  <run_depend>libqhull</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>libpcap</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
